# twotower-project

./: .gitignore  CHANGELOG.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
artifacts/: twotower_model.pth
src/: args.py  data.py  сonfig.py
src/app/: main.py
tests/: test_evaluate.py  test_fit.py  test_package_exports.py  test_predict.py  test_save_load.py
twotower/: __init__.py  config.py  core.py  data.py  evaluate.py  features.py  fit.py  item_tower.py  load_model.py  predict.py  preprocessing.py  save_model.py  user_tower.py
twotower/api/: __init__.py
twotower/api/config/: __init__.py
twotower/modules/: __init__.py  item_tower.py  mlp.py  twotower_base.py  user_tower.py
twotower/src/: api_export.py  core.py  data.py  evaluate.py  fit.py  load_model.py  preprocessing.py  version.py
twotower/src/backend/: config.py
twotower/src/backend/common/: global_state.py
twotower/src/modules/: item_tower.py  twotower_base.py  user_tower.py
twotower/src/utils/: traceback_utils.py
