[project]
name = "twotower-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "gradio>=6.12.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.2",
    "rich>=15.0.0",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "uvicorn>=0.44.0",
]
