[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "twotower-project"
version = "0.1.0"
description = "Library-style two-tower retrieval model with fit, predict, evaluate, save_model, and load_model APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "gradio>=6.12.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.2",
    "rich>=15.0.0",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "uvicorn>=0.44.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["twotower", "twotower.*"]
exclude = ["tests", "tests.*"]
