[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "twotower"
version = "0.1.0"
description = "Library-style two-tower retrieval model with fit, predict, evaluate, save_model, and load_model APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.2",
    "rich>=15.0.0",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
]

[project.optional-dependencies]
app = [
    "fastapi>=0.136.0",
    "gradio>=6.12.0",
    "pydantic>=2.13.2",
    "uvicorn>=0.44.0",
]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["twotower", "twotower.*"]
exclude = ["tests", "tests.*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
